Fixed Minor bugs. Changed UI.
Fixed Minor bugs. Changed UI.

--- a/gradle.properties
+++ b/gradle.properties
@@ -17,10 +17,14 @@ org.gradle.jvmargs=-Xmx1536m
 # org.gradle.parallel=true
 
 #For Production App
-BaseUrlProd="http://52.66.93.127/api/"
+#BaseUrlProd="http://52.66.93.127/api/"
+#BaseUrlProd="http://127.0.0.1:8000/api/"
+BaseUrlProd="http://104.196.28.139/api/"
 passwordProd=""
 
 
 #For Uat App
-BaseUrlUat="http://52.66.93.127/api/"
+#BaseUrlUat="http://52.66.93.127/api/"
+#BaseUrlUat="http://127.0.0.1:8000/api/"
+BaseUrlUat="http://104.196.28.139/api/"
 passwordUat=""
