--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,13 +33,13 @@ android {
         }
     }
     compileSdkVersion 25
-    buildToolsVersion "25.0.3"
+    buildToolsVersion '27.0.3'
     defaultConfig {
         applicationId "com.jain.vidhyasagarsant"
         minSdkVersion 17
         targetSdkVersion 25
-        versionCode 2
-        versionName "1.2"
+        versionCode 6
+        versionName "1.6"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
     }
