--- a/local.properties
+++ b/local.properties
@@ -7,6 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Jun 16 15:33:28 IST 2017
-ndk.dir=/Users/kuliza-282/Library/Android/sdk/ndk-bundle
-sdk.dir=/Users/kuliza-282/Library/Android/sdk
+#Sat May 12 11:00:30 IST 2018
+sdk.dir=C\:\\Users\\HP\\AppData\\Local\\Android\\Sdk
